--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -28,13 +28,17 @@
 
     <actions>
         <group id="locize-popup" popup="true" class="com.locizehelper.actions.LocizeButtonGroup" icon="/icons/icon.svg">
-            <add-to-group group-id="MainToolbarRight" anchor="first"/>
+            <add-to-group group-id="MainToolbarRight" anchor="first" />
 
             <action id="locize-dev" class="com.locizehelper.actions.LocizeDevAction" text="Locize DEV" />
 
-            <action id="locize-get" class="com.locizehelper.actions.LocizeGetAction" text="Locize GET"/>
+            <action id="locize-dev-sync" class="com.locizehelper.actions.LocizeDevSyncAction" text="Locize DEV SYNC" />
 
-            <action id="locize-get-all" class="com.locizehelper.actions.LocizeGetAllAction" text="Locize GET ALL"/>
+            <separator />
+
+            <action id="locize-get" class="com.locizehelper.actions.LocizeGetAction" text="Locize GET" />
+
+            <action id="locize-get-all" class="com.locizehelper.actions.LocizeGetAllAction" text="Locize GET ALL" />
         </group>
     </actions>
 </idea-plugin>
